@@ -181,6 +181,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18216: gettext now raises an error when a .mo file has an
+  unsupported major version number.  Patch by Aaron Hill.
+
 - Issue #13918: Provide a locale.delocalize() function which can remove
   locale-specific number formatting from a string representing a number,
   without then converting it to a specific type.  Patch by Cédric Krier.
